# ai-fluency-profiler

./: README.md  pyproject.toml
docs/plans/: 2026-03-12-intent-aware-reframe.md
src/fluency/: __init__.py  __main__.py  cli.py  connector.py  git_tracer.py  insights.py  models.py  parser.py  report.py  sequence.py
tests/test_fluency/: test_connector.py  test_git_tracer.py  test_insights.py  test_parser.py  test_real_session.py  test_report.py  test_sequence.py
