[project]
name = "ai-fluency-profiler"
version = "0.1.0"
description = "Analyze AI coding sessions against git history"
requires-python = ">=3.11"

[project.scripts]
fluency = "fluency.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fluency"]

[tool.pytest.ini_options]
testpaths = ["tests/test_fluency"]
